Did a few things: (a) Provided packing options to generate executable binary package e.g. JVM_OPTS (b) Removed end-of-line characters from configuration (c) Updated the Engine, EngineState, Finite State Machine to be able to handle the monitoring of Google Dataflow jobs automatically (d) Enabled the Engine and ReST callback to parse and validate the google job id (e) Updated the unit tests to reflect code changes; Added more tests to cover additional JSON parsing code (f) Added Lenses to traverse JSON structures returned from Google for intepretation by the Engine